# bevy-html5canvas-wasm

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  postcss.config.js  rollup.dev.js  rollup.dev.mjs  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
devhtml/: bevy-html5canvas-wasm-8cbbcae282861b88.js  index.html
src/: constants.rs  lib.rs  logging.rs  models.rs  player.rs  router.rs  user_input.rs  utils.rs  walls.rs
static/css/: main.css
styles/: globals.css
