[package]
name = "bevy-html5canvas-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Rizary <andika.riyan@gmail.com>"]
categories = ["wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"
nalgebra = "0.32.1"
js-sys = "0.3.61"
lazy_static = "1.4.0"
log = "0.4.11"
wasm-bindgen = { version = "0.2.84", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4.34"
wasm-logger = { version = "0.2.0", optional = true }
fastrand = "1.8.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.92"
futures = "0.3.26"

[features]
ts_test = []
develop = ["wasm-logger", "console_error_panic_hook" ]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.61"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'BeforeUnloadEvent',
  'CanvasGradient',
  'CanvasRenderingContext2d',
  "console",
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'History',
  'HtmlAudioElement',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlMediaElement',
  "ImageData",
  'KeyboardEvent',
  'Location',
  'MediaElementAudioSourceNode',
  'MouseEvent',
  'Navigator',
  'Node',
  'PopStateEvent',
  'Response',
  'Screen',
  'Storage',
  'TextMetrics',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlRenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
