[package]
name = "bevy-html5canvas-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Rizary <andika.riyan@gmail.com>"]
categories = ["wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
resolver = "2" # wgpu/Bevy need this

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = "fat"
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 1
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"
nalgebra = "0.32.1"
js-sys = "0.3.61"
lazy_static = "1.4.0"
log = "0.4.11"
wasm-bindgen = { version = "0.2.84", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4.3"
wasm-logger = { version = "0.2.0", optional = true }
fastrand = "1.8.0"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.92"
futures = "0.3.26"
dominator = "0.5.26"
futures-signals = "0.3.28"
uuid = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["wasmbind"] }
discard = "1.0.4"
bevy_rapier2d = { version = "0.20.0", features = ["default", "wasm-bindgen"]}
leafwing-input-manager = "0.8.0"
ron = "0.8"
tracing = "0.1"

# Bevy dependencies
bevy_asset_loader = "0.14.1"
# bevy_ninepatch = "0.9.1"

[features]
ts_test = []
develop = ["wasm-logger", "console_error_panic_hook" ]

# bevy engine
[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_text",
    "bevy_sprite",
    "png",
    "animation",
    "bevy_gilrs",
]

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.61"
features = [
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioContext',
  'AudioContextState',
  'AudioDestinationNode',
  'BeforeUnloadEvent',
  'CanvasGradient',
  'CanvasRenderingContext2d',
  "console",
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'History',
  'HtmlAudioElement',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlMediaElement',
  "ImageData",
  'KeyboardEvent',
  'Location',
  'MediaElementAudioSourceNode',
  'MouseEvent',
  'Navigator',
  'Node',
  'PopStateEvent',
  'Response',
  'Screen',
  'Storage',
  'TextMetrics',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlRenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.34"
